more changes for peskin
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@306 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -248,6 +248,7 @@ is shown in Fig.~\ref{fig:EFT_kinematics}.
 Based on these studies, the Forum recommends experimental collaborations to deliver 
 results for mediators with a mass of 10 TeV instead of pure EFT results for each of the DM masses 
 considered in the scan, and leave further reinterpretation to theorists.
+Of course, one should be careful that a simplified model with a high-mass mediator is correctly implemented in the generator (see page \pageref{thought:heavynarrowmediators}).
 %The mediator mass that we advise to use for this purpose reinterpretation is 10 TeV, 
 We therefore advise to add one grid scan point at very high mediator mass (10 \tev) to the scan, 
 for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. 
