--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -378,6 +378,8 @@ At leading order of $\sin\theta$, the $h^2 S$ term is fixed once the mass eigenv
 and mixing angle are specified.  The $h\,S^2$ term is not fixed and remains a free parameter of the model, depending on 
 the new physics coupling $b$. 
 
+This model has mono-X signatures through h/S mixing. If $m_S \gg m_h$ or $m_h \gg m_S$, this model is a case of the scalar model discussed in Section 2.2, with \mMed equal to the lighter of the two masses.
+
 \subsubsection{Parameter scan}
 
 The model is described by five parameters: 
@@ -506,7 +508,7 @@ represented in the diagram in Fig. \ref{fig:feyn_prod_monoH} (b).
 
 
 The motivation for coupling the dark matter to the pseudoscalar is that dark matter coupling to a Higgs or \Zprime boson is generically 
-constrained by other signal channels and direct detection. 
+constrained by other signal channels and direct detection.
 A reason to consider this model
 is that it has different kinematics  due to the on-shell \Zprime production, 
 where for heavy \Zprime masses the \MET and $p_T$ spectra are much harder.
