--- a/doc/tex/AdditionalDetails.tex
+++ b/doc/tex/AdditionalDetails.tex
@@ -1,4 +1,4 @@
-\section{Further information for baryonic Zprime Model}
+\section{Further information for baryonic \Zprime Model}
 
 \subsection{Cross-section scaling}
 
