--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -6,13 +6,13 @@
 
 %Contributed by Yang Bai
 
-As pointed out in Ref.~\cite{Bell:2015sza}, the mono-$W$ signature can probe the iso-spin violating interactions of dark matter with quarks. The relevant operators after the electroweak symmetry breaking is 
+As pointed out in Ref.~\cite{Bell:2015sza}, the mono-$W$ signature can probe the iso-spin violating interactions of dark matter with quarks. The relevant operator after the electroweak symmetry breaking is 
 %
 \begin{equation}
 \frac{1}{\Lambda^2}\overline{\chiDM} \gamma_\mu \chiDM \left( \overline{u}_L \gamma^\mu u_L + \xi \bar{d}_L \gamma^\mu d_L \right) \,.
 \end{equation}
 %
-Here, we only keep the left-handed quarks because the right-handed quarks do not radiate a $W$-gauge boson from the weak interaction. As the LHC constraints the cutoff to higher values, it is also important to know the corresponding operators before the electroweak symmetry. At the dimension-six level, the following operator
+Here, we only keep the left-handed quarks because the right-handed quarks do not radiate a $W$-gauge boson from the weak interaction. As the LHC constrains the cutoff to higher values, it is also important to know the corresponding operators before the electroweak symmetry. At the dimension-six level, the following operator
 %
 \begin{equation}
 \frac{c_6}{\Lambda^2}\overline{\chiDM} \gamma_\mu \chiDM \,\overline{Q}_L \gamma^\mu Q_L 
