--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -58,7 +58,7 @@ are recommended for Higgs+\MET searches:
 	}
 	\caption
 	{
-		Feynman diagrams of leading order processes leading to Higgs+\MET events: 
+		Examples of Feynman diagrams leading to Higgs+\MET events: 
                 (a) %%% ref doesn't seem to work here
                 a model with a vector mediator (\Zprime) 
 		coupling with DM and with the Higgs boson $h$,
@@ -140,7 +140,7 @@ and
 	}
 	\caption
 	{
-		Feynman diagrams of leading order processes leading to Higgs+\MET events for a model with a scalar mediator ($S$) 
+		Examples of Feynman diagrams leading to Higgs+\MET events for a model with a scalar mediator ($S$) 
 		coupling with DM and with the Higgs boson $h$. 
 	}
 	\label{fig:feyn_prod_monoH_S}
