--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -15,7 +15,7 @@ Dark matter has not yet been observed in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions
 between dark matter and Standard Model particles.  If such
 interactions exist, dark matter particles could be produced
-at the LHC. Since dark matter particles of themselves do not produce signals
+at the LHC. Since dark matter particles themselves do not produce signals
 in the LHC detectors, one way to observe them is when they are produced in association
 with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% so simple pair-production of dark matter particles, for example,
@@ -41,7 +41,7 @@ two dark matter particles.  In this case,
 the missing
 energy distribution of the signal is determined
 by the nature and the mass of the dark
-matter particles and the Lorentz structure of the interaction. Only the
+matter particles and the Lorentz structure of the interaction, and only the
 overall production rate is a free parameter to be constrained or measured.
 Both experiments studied a variety
 of EFTs with different spin structures. Provided that the contact
@@ -111,7 +111,7 @@ signals which are most urgently needed. As far as time and resources
 have allowed, the assumptions have been carefully motivated by
 theoretical consensus and comparisons of simulations. But, to achieve a
 true consensus in only a few months before the start of Run-2, it was
-important to narrow the scope and timescale to the following:
+important to restrict the scope and timescale to the following:
 
 \begin{enumerate}
 \item The forum should propose a prioritized, compact set of benchmark
@@ -184,7 +184,7 @@ the same time discovery of an anomalous and annually-modulated signal
 in a direct-detection experiment would leave unanswered many questions
 about the nature of the interaction that could be resolved by the simultaneous discovery
 of a new mediator particle. 
-Collider, direct and indirect detection searches provide complementary ways to
+Collider, direct, and indirect detection searches provide complementary ways to
 approach this problem, and it is in this spirit that our focus is on
 the mediator. We systematically explore the basic possibilities for
 mediators of various possible spins and couplings.
