First attempt at table layout
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@311 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -1,20 +1,26 @@
-%\begin{table}
-%\begin{tabular}{llrrr} \toprule \multicolumn{5}{c}{Benchmark models for ATLAS and CMS Run-2 DM searches}\\
-%	\cmidrule(r){1-5} 
-%	Model & Signature & State of the art calculation & Link to implementation & References to cite\\ 
-%	\midrule vector mediator, \schannel & jet + \MET{} & \textbf{NLO+PS (\powheg)} & link & Ref \\ 
-%	 & jet + \MET{} & NLO (\mcfm) & link & Ref \\ 
-%	 & jet + \MET{} & NLO (\madgraph) & link & Ref \\ 
+\footnotesize 
+\begin{table}
+\begin{tabular}{llrr} \toprule \multicolumn{4}{c}{Benchmark models for ATLAS and CMS Run-2 DM searches}\\
+	\cmidrule(r){1-4} 
+	\multicolumn{4}{c}{vector mediator, \schannel}\\
+	\cmidrule(r){1-4} 
+	Signature & State of the art calculation & Link to implementation & References \\ 
+	jet + \MET{} & \textbf{NLO+PS (\powheg)} & link & Ref \\ 
+	& NLO (\mcfm) & link & Ref \\ 
+	& LO+PS (\madgraph) & link & Ref \\ 		
+    $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph)} & link  & Ref \\ 
+		
+%	\midrule  scalar mediator, \schannel & jet + \MET{} & \textbf{LO+PS, top loop (\powheg)} & link & Ref \\ 
+%	 & NLO (\mcfm) & link & Ref \\ 
+%	  & LO+PS (\madgraph) & link & Ref \\ 		
+%	 $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph)} & link  & Ref \\ 	
+%	 $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (\madgraph)} & link & Ref \\ 
 %	
-%	
-%	\midrule  vector mediator, \schannel & $W/Z/\gamma$ + \MET{} & NLO+PS & link  & Ref \\ 
-%	
-%	
-%	\midrule  scalar mediator, \schannel & jet + \MET{} & LO+PS (top loop) & link & Ref \\ 
-%	\midrule  scalar mediator, \schannel & $t\bar{t},b\bar{b}$+ \MET{} & LO+PS & link & Ref \\ 
-%	\midrule  scalar mediator, \tchannel & $W/Z/\gamma$ + \MET{} & LO+PS & link &Ref \\ 
-%	\bottomrule 
-%	\end{tabular}
-%	\caption{\label{tab:summaryModels} Summary table for recommended benchmark models and their implementation} 
-%\end{table}\footnotesize 
-%\normalsize
+%	\midrule  scalar mediator, \tchannel &  jet(s) + \MET{} & \textbf{LO+PS (\madgraph)} & link &Ref \\ 
+%	 $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph)} & link &Ref \\ 
+	
+	\bottomrule 
+	\end{tabular}
+	\caption{\label{tab:summaryModels} Summary table for recommended benchmark models and their implementation} 
+\end{table}
+\normalsize
