--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -257,19 +257,19 @@ In case of narrow width mediators, e.g. $\Gamma_{\rm{min}}/\mMed\sim0.05$, even 
 \label{fig:monojet_narrow}
 \end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
 \subfloat[]{
-\includegraphics[width=0.75\textwidth]{figures/monojet/mxx.eps}% width = 0.73 => regular textwidth of figure environment. figure* used to avoid overlapping captions.
+\includegraphics[width=0.73\textwidth]{figures/monojet/mxx.eps}% width = 0.73 => regular textwidth of figure environment. figure* used to avoid overlapping captions.
 \label{fig:monojet_mchichi_a}}
 \hfill
 \subfloat[]{
-\includegraphics[width=0.75\textwidth]{figures/EFT/TruthShat3_compEFTvsZprime_DM150_narrow_new}
+\includegraphics[width=0.45\textwidth]{figures/monojet/TruthShat_compEFTvsZprime_DM150_narrow.eps}
 \label{fig:monojet_mchichi_b}}
 \caption{Invariant mass of the Dark Matter pair in the vector mediator samples with $\mDM=10$~\gev, $\mMed=5$~\tev and different coupling strengths (a).
 Similar comparison is shown for the samples with different mediator masses considering $\Gamma_{\rm{min}}/\mMed=0.05$ (b). An EFT sample is also displayed in the latter case. The distributions are normalised to unit area.}
 \label{fig:monojet_mchichi}
-\end{figure}
+\end{figure*}
 
 
 
