some figure improvements
though still needs work


git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@313 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -161,7 +161,7 @@ In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, t
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/compareModels_VA_100.eps}
-\caption{Comparison of the pure vector and pure axial-vector couplings. The $\MET$ distribution is shown for the samples generated with $\mMed=100$~\gev and different Dark Matter masses. Ratios of the normalized distributions are shown for between the samples with coincident masses. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption[][-28pt]{Comparison of the pure vector and pure axial-vector couplings. The $\MET$ distribution is shown for the samples generated with $\mMed=100$~\gev and different Dark Matter masses. Ratios of the normalized distributions are shown for between the samples with coincident masses. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_VAmodels}
 \end{figure*}
 
@@ -180,14 +180,14 @@ Based on these arguments, we recommend to consider only the models with pure vec
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/compareVA_100_1000.eps}
-\caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=1$~\tev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption[][-28pt]{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=1$~\tev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_VA_mMed1000}
 \end{figure*}
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/compareVA_100_100.eps}
-\caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=100$~\gev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption[][-28pt]{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=100$~\gev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_VA_mMed100}
 \end{figure*}
 %%% end of the new section by DS
@@ -214,7 +214,7 @@ Differences in kinematic distributions are expected only close to the transition
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_V_10_1000.eps}
-\caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption[][-28pt]{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_g}
 \end{figure*}
 
@@ -253,20 +253,20 @@ In case of narrow width mediators, e.g. $\Gamma_{\rm{min}}/\mMed\sim0.05$, even 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_EFT_10_5000.eps}
-\caption{Comparison of the $\MET$ distributions from the D5 EFT sample and the vector models with 5~\tev heavy mediator of various widths. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption[][-28pt]{Comparison of the $\MET$ distributions from the D5 EFT sample and the vector models with 5~\tev heavy mediator of various widths. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_narrow}
 \end{figure*}
 
 \begin{figure*}
 \centering
 \subfloat[]{
-\includegraphics[width=0.73\textwidth]{figures/monojet/mxx.eps}% width = 0.73 => regular textwidth of figure environment. figure* used to avoid overlapping captions.
+\includegraphics[width=0.49\textwidth]{figures/monojet/mxx.eps}% width = 0.73 => regular textwidth of figure environment. figure* used to avoid overlapping captions.
 \label{fig:monojet_mchichi_a}}
 \hfill
 \subfloat[]{
-\includegraphics[width=0.45\textwidth]{figures/monojet/TruthShat_compEFTvsZprime_DM150_narrow.eps}
+\includegraphics[width=0.49\textwidth]{figures/monojet/TruthShat_compEFTvsZprime_DM150_narrow.eps}
 \label{fig:monojet_mchichi_b}}
-\caption{Invariant mass of the Dark Matter pair in the vector mediator samples with $\mDM=10$~\gev, $\mMed=5$~\tev and different coupling strengths (a).
+\caption[][14pt]{Invariant mass of the Dark Matter pair in the vector mediator samples with $\mDM=10$~\gev, $\mMed=5$~\tev and different coupling strengths (a).
 Similar comparison is shown for the samples with different mediator masses considering $\Gamma_{\rm{min}}/\mMed=0.05$ (b). An EFT sample is also displayed in the latter case. The distributions are normalised to unit area.}
 \label{fig:monojet_mchichi}
 \end{figure*}
@@ -301,14 +301,16 @@ For a fixed mediator mass \mMed and couplings, the Dark Matter mass falls into t
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_mDM_V_1000.eps}
-\caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\vspace{4\baselineskip}
+\caption[][-84pt]{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mDM1000}
 \end{figure*}
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_mDM_V_100.eps}
-\caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\vspace{4\baselineskip}
+\caption[][-84pt]{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mDM100}
 \end{figure*}
 
@@ -321,14 +323,15 @@ is illustrated in Fig.\,\ref{fig:monojet_scan_V_mMed1000}. Therefore, a coarse b
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_mMed_V_10.eps}
-\caption{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\vspace{4\baselineskip}
+\caption[][-84pt]{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mMed10}
 \end{figure*}
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{figures/monojet/scan_mMed_V_1000.eps}
-\caption{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption[][-28pt]{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mMed1000}
 \end{figure*}
 
