--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -298,7 +298,7 @@ both in the simplified model and in the EFT case. This can be seen in Fig.~\ref{
 	\subfloat[Invariant mass of the two WIMPs $m_{\chi \chi}$, simplified model]{
 		\includegraphics[width=0.47\linewidth]{figures/EFT/Zprime_shat} 
 	}		
-	\caption{Comparison of the kinematic distributions for a narrow \schannel mediator, 
+	\caption[][28pt]{Comparison of the kinematic distributions for a narrow \schannel mediator, 
 		at generator level for a jet+\MET{} signature, for varying DM masses. 
 		\label{fig:EFT_kinematics_mDM}}
 \end{figure*}
