Cross checks with D. Salek
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@314 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -731,6 +731,21 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
+@misc{ForumSVN_DMS,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar and pseudoscalar
+	coupling to the quarks in a Yukawa-like way, at NLO.}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMV,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
 @misc{ForumSVN_DMA,
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of axial vector mediator}},
 	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMA/}",
@@ -738,17 +753,16 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
-
-@misc{ForumSVN_DMS,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator, with gluon loop}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
+@misc{ForumSVN_DMP,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
 
-@misc{ForumSVN_DMV,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
+@misc{ForumSVN_DMGG,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
@@ -767,19 +781,6 @@
 	note = "[Online; accessed 27-April-2015]"
 }
 
-@misc{ForumSVN_DMP,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP/}",
-	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
-}
-
-@misc{ForumSVN_DMGG,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator, production through top loop from gluon-gluon initial state}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
-	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
-}
 
 @misc{ForumSVN_DMTTBar,
 	title = {{SVN repository for Madgraph inputs for model with s-channel exchange of pseudo-scalar mediator, produced in association with top quarks}},
