Summary table 'state of the art' committed
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@315 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -731,13 +731,6 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
-@misc{ForumSVN_DMS,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar and pseudoscalar
-	coupling to the quarks in a Yukawa-like way, at NLO.}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
-	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
-}
 
 @misc{ForumSVN_DMV,
 	title = {{SVN repository for POWHEG input card for model with s-channel exchange of vector mediator}},
@@ -753,9 +746,26 @@
 	note = "[Online; accessed 24-April-2015]"
 }
 
-@misc{ForumSVN_DMP,
-	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator}},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP/}",
+@misc{ForumSVN_DMS,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar and pseudoscalar
+	coupling to the quarks in a Yukawa-like way, at NLO.}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMP_tloop,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of pseudo-scalar mediator,
+	coupling to the quarks through a top loop}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP_tloop/}",
+	year = {2015}, 
+	note = "[Online; accessed 24-April-2015]"
+}
+
+@misc{ForumSVN_DMS_tloop,
+	title = {{SVN repository for POWHEG input card for model with s-channel exchange of scalar mediator,
+	}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS_topLoop/}",
 	year = {2015}, 
 	note = "[Online; accessed 24-April-2015]"
 }
@@ -1394,22 +1404,6 @@
 }
 
 
-@article{Degrande:2011ua,
-      author         = "Degrande, Celine and Duhr, Claude and Fuks, Benjamin and
-                        Grellscheid, David and Mattelaer, Olivier and others",
-      title          = "{UFO - The Universal FeynRules Output}",
-      journal        = "Comput.Phys.Commun.",
-      volume         = "183",
-      pages          = "1201-1214",
-      doi            = "10.1016/j.cpc.2012.01.022",
-      year           = "2012",
-      eprint         = "1108.2040",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      reportNumber   = "CP3-11-25, IPHC-PHENO-11-04, IPPP-11-39, DCPT-11-78,
-                        MPP-2011-68",
-      SLACcitation   = "%%CITATION = ARXIV:1108.2040;%%",
-}
 @article{Alwall:2008ag,
       author         = "Alwall, Johan and Schuster, Philip and Toro, Natalia",
       title          = "{Simplified Models for a First Characterization of New
@@ -2169,3 +2163,113 @@
 	reportNumber   = "CALT-68-2614",
 	SLACcitation   = "%%CITATION = HEP-PH/0611014;%%",
 }
+
+@article{Alioli:2010xd,
+	author         = "Alioli, Simone and Nason, Paolo and Oleari, Carlo and Re,
+	Emanuele",
+	title          = "{A general framework for implementing NLO calculations in
+	shower Monte Carlo programs: the POWHEG BOX}",
+	journal        = "JHEP",
+	volume         = "1006",
+	pages          = "043",
+	doi            = "10.1007/JHEP06(2010)043",
+	year           = "2010",
+	eprint         = "1002.2581",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+}
+
+@article{Nason:2004rx,
+	author         = "Nason, Paolo",
+	title          = "{A New method for combining NLO QCD with shower Monte
+	Carlo algorithms}",
+	journal        = "JHEP",
+	volume         = "0411",
+	pages          = "040",
+	doi            = "10.1088/1126-6708/2004/11/040",
+	year           = "2004",
+	eprint         = "hep-ph/0409146",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+}
+
+@article{Frixione:2007vw,
+	author         = "Frixione, Stefano and Nason, Paolo and Oleari, Carlo",
+	title          = "{Matching NLO QCD computations with Parton Shower
+	simulations: the POWHEG method}",
+	journal        = "JHEP",
+	volume         = "0711",
+	pages          = "070",
+	doi            = "10.1088/1126-6708/2007/11/070",
+	year           = "2007",
+	note           = "* Temporary entry *",
+	eprint         = "0709.2092",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+}
+
+@article{Hirschi:2011pa,
+	author         = "Hirschi, Valentin and Frederix, Rikkert and Frixione,
+	Stefano and Garzelli, Maria Vittoria and Maltoni, Fabio
+	and others",
+	title          = "{Automation of one-loop QCD corrections}",
+	journal        = "JHEP",
+	volume         = "1105",
+	pages          = "044",
+	doi            = "10.1007/JHEP05(2011)044",
+	year           = "2011",
+	eprint         = "1103.0621",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2011-031, CP3-11-07, ZU-TH-01-11",
+	SLACcitation   = "%%CITATION = ARXIV:1103.0621;%%",
+}
+
+
+@Article{Alloul:2013bka,
+	author        = "Adam Alloul and Neil D. Christensen and Celine Degrande and Claude Duhr and Benjamin Fuks",
+	title         = "FeynRules 2.0 - A complete toolbox for tree-level phenomenology",
+	journal       = "Comput.Phys.Commun.",
+	volume        = "185",
+	pages         = "2250-2300",
+	year          = "2014",
+	eprint        = "1310.1921",
+	archivePrefix = "arXiv",
+	primaryClass  = "hep-ph",
+}
+@article{Alwall:2014hca,
+	author         = "Alwall, J. and Frederix, R. and Frixione, S. and Hirschi,
+	V. and Maltoni, F. and others",
+	title          = "{The automated computation of tree-level and
+	next-to-leading order differential cross sections, and
+	their matching to parton shower simulations}",
+	journal        = "JHEP",
+	volume         = "1407",
+	pages          = "079",
+	doi            = "10.1007/JHEP07(2014)079",
+	year           = "2014",
+	eprint         = "1405.0301",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09,
+	ZU-TH-14-14",
+	SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%",
+}
+
+@article{Degrande:2011ua,
+	author         = "Degrande, Celine and Duhr, Claude and Fuks, Benjamin and
+	Grellscheid, David and Mattelaer, Olivier and others",
+	title          = "{UFO - The Universal FeynRules Output}",
+	journal        = "Comput.Phys.Commun.",
+	volume         = "183",
+	pages          = "1201-1214",
+	doi            = "10.1016/j.cpc.2012.01.022",
+	year           = "2012",
+	eprint         = "1108.2040",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CP3-11-25, IPHC-PHENO-11-04, IPPP-11-39, DCPT-11-78,
+	MPP-2011-68",
+	SLACcitation   = "%%CITATION = ARXIV:1108.2040;%%",
+}
+
