--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -25,7 +25,8 @@ with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% could be produced in association with dark matter.
 Such reactions, which are
 observed at colliders as particles or jets recoiling against an invisible state, are
-called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, where \MET is the missing transverse momentum observable in the detector.
+called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, 
+where \MET is the missing transverse momentum observable in the detector.
 \Todo{CD: why singling out mono-Higgs?}
 This type of reaction includes the production of a Higgs boson that
 decays to pairs of dark matter particles.
