--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -29,7 +29,7 @@ for this case as well.
 Here, we document some specific settings needed to run the \powheg 
 generation for the Dark Matter models. POWHEG parameter cards for all models
 can be found on the Forum SVN repository
-~\cite{ForumSVN_DMA, ForumSVN_DMV, ForumSVN_DMS, ForumSVN_DMGG}.
+~\cite{ForumSVN_DMA, ForumSVN_DMV, ForumSVN_DMS_tloop, ForumSVN_DMA_tloop}.
 
 
 \begin{itemize}
