--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -1,26 +1,55 @@
-\footnotesize 
+\clearpage 
+
+\begin{footnotesize}
+ 
 \begin{table}
-\begin{tabular}{llrr} \toprule \multicolumn{4}{c}{Benchmark models for ATLAS and CMS Run-2 DM searches}\\
-	\cmidrule(r){1-4} 
-	\multicolumn{4}{c}{vector mediator, \schannel}\\
-	\cmidrule(r){1-4} 
+	\centering\scriptsize
+\begin{tabular}{llrr} \toprule \multicolumn{4}{c}{\textbf{Benchmark models for ATLAS and CMS Run-2 DM searches}}\\
+	
+	
+	\cmidrule(r){2-4} 
+	\multicolumn{4}{c}{vector/axial vector mediator, \schannel}\\
+	\cmidrule(r){2-4} 
+
 	Signature & State of the art calculation & Link to implementation & References \\ 
-	jet + \MET{} & \textbf{NLO+PS (\powheg)} & link & Ref \\ 
-	& NLO (\mcfm) & link & Ref \\ 
-	& LO+PS (\madgraph) & link & Ref \\ 		
-    $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph)} & link  & Ref \\ 
+	\cmidrule(r){1-4} 
+    jet + \MET{} & \textbf{NLO+PS (\powheg, r3059)} & \cite{ForumSVN_DMA, ForumSVN_DMV} & \cite{Haisch:2013ata,Alioli:2010xd,Nason:2004rx,Frixione:2007vw,Haisch:2015ioa} \\ 
+	& NLO (\mcfm) & TBC & \cite{Fox:2012ru} \\ 
+	& LO+PS (\madgraph, v2.2.3) &TBC & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} \\ 		
+    $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & \cite{ForumSVN_EW_DMV} & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}  \\ 
+
+
+	\cmidrule(r){2-4} 
+	\multicolumn{4}{c}{scalar/pseudoscalar mediator, \schannel}\\
+	\cmidrule(r){2-4} 
+	Signature & State of the art calculation & Link to implementation & References \\ 
+		\cmidrule(r){1-4} 
 		
-%	\midrule  scalar mediator, \schannel & jet + \MET{} & \textbf{LO+PS, top loop (\powheg)} & link & Ref \\ 
-%	 & NLO (\mcfm) & link & Ref \\ 
-%	  & LO+PS (\madgraph) & link & Ref \\ 		
-%	 $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph)} & link  & Ref \\ 	
-%	 $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (\madgraph)} & link & Ref \\ 
+	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} & Ref \\ 
+	& NLO (\mcfm) & TBC & \cite{Fox:2012ru} \\ 
+	& NLO+PS (\madgraph, v2.3.0) & TBC & \cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} \\ 		
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & TBC  & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} \\ 
+    $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & TBC & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}\\ 
+    
+	\cmidrule(r){2-4} 
+	\multicolumn{4}{c}{scalar mediator, \tchannel}\\
+	\cmidrule(r){2-4} 
+	Signature & State of the art calculation & Link to implementation & References \\ 
+		\cmidrule(r){1-4} 
+		
+	jet(s) + \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & \cite{ForumSVN_TChannel}& \cite{Papucci:2014iwa} \\ 
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph), v2.2.3} & TBC  & \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua}\\ 
+		
 %	
 %	\midrule  scalar mediator, \tchannel &  jet(s) + \MET{} & \textbf{LO+PS (\madgraph)} & link &Ref \\ 
 %	 $W/Z/\gamma$ + \MET{} & \textbf{LO+PS (\madgraph)} & link &Ref \\ 
 	
 	\bottomrule 
 	\end{tabular}
-	\caption{\label{tab:summaryModels} Summary table for recommended benchmark models and their implementation} 
 \end{table}
-\normalsize
+
+\end{footnotesize}
+
+\begin{center}
+	Table 6.1: Summary table for recommended benchmark models and their implementation.
+\end{center}
